# rappi-ds-housing

./: README.md  instructions.md  pyproject.toml
housing/: Data_holder.py  __init__.py  commons.py  data_info.py  eda.py  feature_engineering.py  final_pipeline.py  models.py  outliers.py
